# DataSet_Rag

./: .gitignore  docker-compose.yml  download_bge.py  main.py  pyproject.toml
app/conf/: embedding_config.py
app/import_process/agent/: main_graph.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: file_import_service.py
app/import_process/page/: import.html
app/lm/: embedding_utils.py  reranker_utils.py
app/query_process/agent/: main_graph.py  state.py
app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/api/: query_service.py
app/query_process/sse/: sse_step_1.html  sse_step_1.py  sse_step_2.html  sse_step_2.py
app/tool/: download_reranker.py
test/: 04-test_graph_flow.py  test_import_main_graph.py  test_query_main_graph.py
教案/: 02【掌柜智库】模块流程设计.md
