[project]
name = "dataset-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.9",
    "lm>=0.1.0",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "minio>=7.2.20",
    "modelscope>=1.38.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymilvus>=3.0.0",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "regex>=2026.6.28",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.28.0",
    "uvicorn[standard]>=0.51.0",
]
